--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <header>
             <h1>📝 Biên Bản Cuộc Họp</h1>
             <p>Ghi âm cuộc họp và tự động tạo biên bản bằng AI</p>
+            <p class="info-text">⏱️ Hỗ trợ ghi âm tối đa 2 giờ | 📁 Kích thước tối đa 25MB</p>
         </header>
 
         <main>
