Remove all icons/emojis for cleaner UI

--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
 <body>
     <div class="container">
         <header>
-            <h1>📝 Biên Bản Cuộc Họp</h1>
+            <h1>Biên Bản Cuộc Họp</h1>
             <p>Ghi âm cuộc họp và tự động tạo biên bản bằng AI</p>
-            <p class="info-text">⏱️ Hỗ trợ ghi âm tối đa 2 giờ | 📁 Kích thước tối đa 25MB</p>
+            <p class="info-text">Hỗ trợ ghi âm tối đa 2 giờ | Kích thước tối đa 25MB</p>
         </header>
 
         <main>
             <section class="recording-section">
                 <div class="controls">
                     <button id="startBtn" class="btn btn-primary">
-                        <span class="icon">🎤</span> Bắt đầu ghi âm
+                        Bắt đầu ghi âm
                     </button>
                     <button id="stopBtn" class="btn btn-danger" disabled>
-                        <span class="icon">⏹</span> Dừng ghi âm
+                        Dừng ghi âm
                     </button>
                 </div>
 
@@ -65,10 +65,10 @@
 
                 <div class="actions" style="display: none;">
                     <button id="downloadBtn" class="btn btn-secondary">
-                        <span class="icon">💾</span> Tải xuống
+                        Tải xuống
                     </button>
                     <button id="copyBtn" class="btn btn-secondary">
-                        <span class="icon">📋</span> Sao chép
+                        Sao chép
                     </button>
                 </div>
             </section>
